<resources>
    <string name="app_name">Reminder</string>
    <string name="add">Add</string>
    <string name="spelling">Spelling</string>
    <string name="creationDate">Date of creation</string>
    <string name="translation">Translation</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="title_fragment_create_word">Create Word</string>
    <string name="title_fragment_word_list_holder">Word List Holder</string>
    <string name="menu_title_create_word">Create Word</string>
    <string name="menu_title_word_list">Your Words</string>
    <string name="category_name">Category name</string>
    <string name="language">Language</string>
    <string name="write_to_search">Write to search…</string>
    <string name="tap_to_select_category">Tap to select category</string>
    <string name="create_new">Create new…</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="write_a_language">Write a language</string>
    <string name="write_a_category_name">Write a category name</string>
    <string name="create_category">Create new category</string>
    <string name="this_field_cannot_be_blank">This field cannot be blank</string>
    <string name="word_creator">"Word creator"</string>
    <string name="category">Category</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="press_back_again_to_leave">Press the back again to exit the app.</string>
    <string name="unknown_date">unknown date</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_word_warning">Are you sure you want to delete the word</string>
    <string name="no_changes_found">No changes found</string>
    <string name="paste_from_clipboard">paste from clipboard</string>
    <string name="no_words_state">This category seems to be empty, but you can add new words here.</string>
    <string name="no_search_result_state">Unfortunately, I couldn\'t find anything.</string>
    <string name="date_format">dd.MM.yyyy,  hh:mma</string>
    <string name="delete">Delete</string>
    <string name="delete_word_description">delete word</string>
    <string name="save">Save</string>
    <string name="save_word_description">save word</string>
    <string name="cancel_category_creation_description">cancel category creation</string>
    <string name="create_new_category_description">create new category</string>
    <string name="yes_description">yes</string>
    <string name="no_description">no</string>
    <string name="delete_title">Are you sure, you want to delete word \"%1$s\"</string>
    <string name="save_title">Are you sure, you want to save your changes?</string>
</resources>