<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_50"
    android:background="@drawable/listitem_word_background"
    android:padding="5dp">


    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_50"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1." />

    <TextView
        android:id="@+id/tv_spelling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_50"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/tv_number"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Reluctance" />


    <TextView
        android:id="@+id/tv_translation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_50"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/tv_spelling"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="(нежелание)" />

    <TextView
        android:id="@+id/tv_pronunciation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_50"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/tv_translation"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="[релуктэнц]" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/small_100"
            android:layout_marginEnd="@dimen/small_100"
            android:background="@drawable/background_bordered_rounded"
            android:clickable="true"
            android:padding="@dimen/small_50"
            android:src="@drawable/ic_baseline_delete_outline_24"
            app:layout_constraintEnd_toStartOf="@+id/iv_save"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_save"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/small_100"
            android:layout_marginEnd="@dimen/small_100"
            android:background="@drawable/background_bordered_rounded"
            android:clickable="true"
            android:padding="@dimen/small_50"
            android:src="@drawable/ic_baseline_check_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_delete">


            <TextView
                android:id="@+id/tv_spellingLabel"
                style="@style/TextViewCreateWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal_100"
                android:text="@string/spelling"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/et_spellingField"
                style="@style/EditTextDetailsWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/spelling"
                android:inputType="textCapSentences" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_50" />


            <TextView
                android:id="@+id/tv_translationLabel"
                style="@style/TextViewCreateWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal_100"
                android:layout_marginTop="@dimen/normal_100"
                android:text="@string/translation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/et_translationField"
                style="@style/EditTextDetailsWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/translation" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_50" />


            <TextView
                android:id="@+id/tv_pronunciationLabel"
                style="@style/TextViewCreateWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal_100"
                android:layout_marginTop="@dimen/normal_100"
                android:text="@string/pronunciation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/et_pronunciationField"
                style="@style/EditTextDetailsWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pronunciation" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_50" />

            <TextView
                android:id="@+id/tv_categoryLabel"
                style="@style/TextViewCreateWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_100"
                android:layout_marginTop="@dimen/normal_100"
                android:text="@string/category" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal_100">

                <TextView
                    android:id="@+id/tv_categoryField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingVertical="@dimen/normal_100"
                    android:text="@string/tap_to_select_category"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_categoryState"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_categoryState"
                    android:layout_width="@dimen/normal_150"
                    android:layout_height="@dimen/normal_150"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_50" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal_100">

                <TextView
                    android:id="@+id/tv_creationDateLabel"
                    style="@style/TextViewCreateWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/normal_100"
                    android:layout_marginEnd="@dimen/small_150"
                    android:text="@string/creationDate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_creationDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:singleLine="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_categoryState"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="26.03.2022" />

            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>